Desktop view invisible header bugfix

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -24,7 +24,7 @@ header h1 {
 @media all and (min-width: 900px) {
   header {
     width: 40%;
-    height: 75px;
+    height: 0;
     margin-left: 100px;
     margin-top: -10px;
     padding-top: 10px;
